--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=edge
+browser=chrome
 
 
 HMCUrl=https://www.hotelmycamp.com/
@@ -9,7 +9,7 @@ HMCWrongPassword=manager2!
 
 AmazonURL=https://www.amazon.com
 YouTubeURL=https://www.youtube.com
-
+ReactshopURL=https://react-shopping-cart-67954.firebaseapp.com/
 
 email=merdanseyfullah01@gmail.com
 emailPassword=123456789S.
